--- a/Bayesian_inference_1/2.3-Sampling.qmd
+++ b/Bayesian_inference_1/2.3-Sampling.qmd
@@ -51,7 +51,7 @@ Many ways to sample
   - *n* chains $\times$ *n* iterations
 - Samples represent the most plausible values *in proportion to their relative compatibility with the data, model, and priors*.
 
-The posterior contains simultaneous samples for each parameter.
+The posterior contains *simultaneous* samples for each parameter.
 
 
 ## Basics of MCMC
@@ -70,7 +70,8 @@ The posterior contains simultaneous samples for each parameter.
 
 ## Simulate data
 
-- Generate a small dataset, to make looking at likelihoods easier
+- Generate a small dataset
+- Easier to look at likelihoods
 
 ```{r}
 #| echo: true
@@ -88,7 +89,7 @@ sd(y)
 #| echo: true
 
 set.seed(45738)
-(mu <- rnorm(1))
+(mu <- rnorm(1, mean = 45))
 (sigma <- rtruncnorm(1, a = 0))
 ```
 
@@ -100,8 +101,8 @@ Use `dnorm()` to get the normal density for two observations of $y$ given the cu
 ```{r}
 #| echo: true
 
-dnorm(y[1], mean = mu, sd = sigma)
-dnorm(y[2], mean = mu, sd = sigma)
+dnorm(y[1], mean = mu, sd = sigma, log = TRUE)
+dnorm(y[2], mean = mu, sd = sigma, log = TRUE)
 ```
 
 . . .
@@ -135,8 +136,9 @@ Now what?
 ```{r}
 #| echo: true
 
-(mu_prop <- mu + rnorm(1))
-(sigma_prop <- rtruncnorm(1, a = 0) + rnorm(1))
+set.seed(52224241)
+(mu_prop <- mu + rnorm(1, 0, 0.01))
+(sigma_prop <- sigma + rnorm(1, 0, 0.001))
 if (sigma_prop < 0) sigma_prop <- abs(sigma_prop)
 (LL_prop <- sum(dnorm(y, mean = mu_prop, sd = sigma_prop, log = TRUE)))
 ```
@@ -166,7 +168,7 @@ exp(LL_prop - LL_current)
 ```{r}
 #| echo: true
 
-set.seed(3427)
+set.seed(34297)
 runif(1)
 exp(LL_prop - LL_current)
 ```
@@ -201,8 +203,8 @@ for (ii in 2:n_samp) {
   LL_current <- sum(dnorm(y, mean = s[ii - 1, 1], sd = s[ii - 1, 2],
                           log = TRUE))
 
-  mu_prop <- s[ii - 1, 1] + rnorm(1)
-  sigma_prop <- s[ii - 1, 2] + rnorm(1)
+  mu_prop <- s[ii - 1, 1] + rnorm(1, 0, 1)
+  sigma_prop <- s[ii - 1, 2] + rnorm(1, 0, 1)
   if (sigma_prop < 0) sigma_prop <- abs(sigma_prop)
   
   LL_prop <- sum(dnorm(y, mean = mu_prop, sd = sigma_prop, log = TRUE))
@@ -249,7 +251,19 @@ ggplot(Post, aes(x = Sample, y = Estimate, color = Parameter)) +
 ## Examining the chain
 
 ```{r}
-ggplot(Post |> filter(Sample <= 20),
+ggplot(Post |> filter(Sample <= 50),
+       aes(x = Sample, y = Estimate, color = Parameter)) +
+  geom_point() +
+  geom_path() +
+  scale_color_manual(guide = "none", values = c("#4570E6", "#C32148")) +
+  facet_grid(Parameter ~ ., scales = "free_y")
+```
+
+
+## Examining the chain
+
+```{r}
+ggplot(Post |> filter(Sample > 2500 & Sample < 2600),
        aes(x = Sample, y = Estimate, color = Parameter)) +
   geom_point() +
   geom_path() +
@@ -263,9 +277,7 @@ ggplot(Post |> filter(Sample <= 20),
 - Chains can take a while to begin oscillating around the optimum
   - Discard samples for burn-in
 - Autocorrelation
-  - Save every *n*th sample (thinning)
-
-Don't write you own MCMC sampler.
+  - Save every *n*^th^ sample (thinning)
 
 
 ## Chain diagnostics
@@ -282,7 +294,7 @@ autocorr.plot(s_mcmc)
 
 - Take a lot more samples (10^6^)
 - Discard the initial 25% of the samples
-- Keep every 100th sample
+- Keep every 100^th^ sample
 
 ```{r}
 set.seed(435739)
@@ -298,8 +310,8 @@ for (ii in 2:n_samp) {
   LL_current <- sum(dnorm(y, mean = s[ii - 1, 1], sd = s[ii - 1, 2],
                           log = TRUE))
 
-  mu_prop <- s[ii - 1, 1] + rnorm(1)
-  sigma_prop <- s[ii - 1, 2] + rnorm(1)
+  mu_prop <- s[ii - 1, 1] + rnorm(1, 0, 1)
+  sigma_prop <- s[ii - 1, 2] + rnorm(1, 0, 1)
   if (sigma_prop < 0) sigma_prop <- abs(sigma_prop)
   
   LL_prop <- sum(dnorm(y, mean = mu_prop, sd = sigma_prop, log = TRUE))
@@ -318,8 +330,8 @@ for (ii in 2:n_samp) {
 
 ```{r}
 #| echo: true
-s <- s[(n_samp * 0.25):n_samp, ]
-s_thin <- s[seq(1, nrow(s), by = 100), ]
+s <- s[(n_samp * 0.25):n_samp, ]         # Drop 25% for burnin
+s_thin <- s[seq(1, nrow(s), by = 100), ] # Thin every 100th sample
 s_mcmc <- as.mcmc(s_thin)
 autocorr.diag(s_mcmc)
 ```
@@ -385,4 +397,16 @@ sd(y)
   - [Demos of lots of MC samplers](https://chi-feng.github.io/mcmc-demo/)
 - No burn-in (does have "warmup" iterations)
 - Very very low autocorrelation
-- Stan's sampler 
+- Stan uses HMC with a "No U-Turn" sampler [@Carpenter2017-yg; @Hoffman2014-vv]
+
+
+## Don't write you own MCMC sampler
+
+Leave it to the professionals.
+
+
+## References
+
+::: {#refs}
+:::
+
