--- a/Bayesian_inference_1/Bayes.bib
+++ b/Bayesian_inference_1/Bayes.bib
@@ -1604,13 +1604,13 @@
                  Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell,
                  Allen",
   journal     = "J. Stat. Softw.",
-  publisher   = "Columbia Univ., New York, NY (United States); Harvard Univ.,
-                 Cambridge, MA (United States)",
   volume      =  76,
   number      =  1,
+  pages       = "1--32",
   year        =  2017,
   keywords    = "Alligator\_Morphology;xx Archived/AJPA Reply;CF Growth/Bayes
                  general;Bayes Readings;Module - Bayes",
+  doi         = "10.18637/jss.v076.i01",
   original_id = "40060833-1213-0e37-9de7-b9d872c8dc4a"
 }
 
@@ -2754,7 +2754,7 @@
 
 @ARTICLE{Vehtari2021-yi,
   title     = "{Rank-Normalization}, Folding, and Localization: An Improved
-               {$\hat{R}$} for Assessing Convergence of {MCMC}",
+               {$\widehat{R}$} for Assessing Convergence of {MCMC}",
   author    = "Vehtari, Aki and Gelman, Andrew and Simpson, Daniel and
                Carpenter, Bob and Bürkner, Paul-Christian",
   abstract  = "Markov chain Monte Carlo is a key computational tool in Bayesian
@@ -2772,7 +2772,6 @@
                chains. Finally, we give recommendations for how these methods
                should be used in practice.",
   journal   = "Bayesian Analysis",
-  publisher = "International Society for Bayesian Analysis",
   volume    =  16,
   number    =  2,
   pages     = "667--718",
@@ -2868,7 +2867,7 @@
 }
 
 @ARTICLE{Schad2022-dc,
-  title    = "Workflow techniques for the robust use of bayes factors",
+  title    = "Workflow techniques for the robust use of Bayes factors",
   author   = "Schad, Daniel J and Nicenboim, Bruno and Bürkner, Paul-Christian
               and Betancourt, Michael and Vasishth, Shravan",
   abstract = "Inferences about hypotheses are ubiquitous in the cognitive
@@ -2894,7 +2893,7 @@
   journal  = "Psychol. Methods",
   month    =  mar,
   year     =  2022,
-  url      = "http://dx.doi.org/10.1037/met0000472",
+  url      = "https://www.ncbi.nlm.nih.gov/pubmed/35266787",
   keywords = "Reading list;Bayes Readings;Module - Bayes",
   language = "en",
   issn     = "1082-989X, 1939-1463",
@@ -3138,7 +3137,8 @@
                  methods by taking a series of steps informed by first-order
                  gradient",
   journal     = "J. Mach. Learn. Res.",
-  publisher   = "jmlr.org",
+  volume      =  15,
+  pages       = "1593--1623",
   year        =  2014,
   url         = "http://www.jmlr.org/papers/volume15/hoffman14a/hoffman14a.pdf",
   keywords    = "Module - Bayes",
