--- a/Bayesian_inference_1/Problem_Sets/PS_1_Key.qmd
+++ b/Bayesian_inference_1/Problem_Sets/PS_1_Key.qmd
@@ -28,7 +28,7 @@ Because the packages that do Bayesian sampling have to compile their code for th
 
 *For Windows*: Install [RTools for Windows](https://cran.r-project.org/bin/windows/Rtools/rtools42/rtools.html)
 
-- You will want RTools version 4.2, because that matches the latest "point" version of R.
+- You will want RTools version 4.2, because that matches the latest "point" version of R. You will need to update to RTools 4.3 when R 4.3 is released.
 - By default, it will install into `C:\`. If you do not have root access to your laptop (i.e., if you are on a University controlled machine) you can install to your user directory. You might need to change the PATH variable in this case (if you need help with that let us know).
 
 *For MacOS*: Install the Xcode Command Line Tools
