--- a/Bayesian_inference_1/Problem_Sets/PS_1_Key.qmd
+++ b/Bayesian_inference_1/Problem_Sets/PS_1_Key.qmd
@@ -136,18 +136,24 @@ a "by hand" type example
 1. simple model and/or ABC
 
 
+## Handedness in Common Toads
 
-Bisazza, A., C. Cantalupo, A. Robins, L. J. Rogers, and G. Vallortigara. 1996. Right-pawedness in toads. *Nature* 379:408–408.
+Preference for one forelimb over the other ("handedness" or "pawedness") is common among vertebrates. Humans, dogs, birds, and other amniotes all have been shown to have some degree of handedness. Bisazza et al. (1996)^[Bisazza, A., C. Cantalupo, A. Robins, L. J. Rogers, and G. Vallortigara. 1996. Right-pawedness in toads. *Nature* 379:408–408.] tested whether common toads (*Bufo bufo*) showed a similar pattern of handedness. Here is the description of their methods:
 
-*Bufo bufo*
+> Toads were placed in the middle of a circular tank (60 cm diameter) with a small plastic balloon wrapped around their head (expt 1), or a small wet piece of paper stuck on their mouth and  nose (expt 2). They were given 10 successive trials; in each trial the first forepaw used in attempts to remove the annoyance was recorded.
 
-> Toads were placed in the middle of a circular tank (60 em diameter) with a small plastic balloon wrapped around their head (expt 1), or a small wet piece of paper stuck on their mouth and  nose (expt 2). They were given 10 successive trials; in each trial the first forepaw used in attempts to remove the annoyance was recorded.
+The results of the experiments were:
 
-Exp 1: 14 Right 4 left
-Exp 2: 26 Right 10 left
+1. Experiment 1: 14 toads showed right preference and 4 left
+2. Experiment 2: 26 toads showed right and 10 left
+
+These authors used a $\chi^2$ test of equal proportions to tests whether these observations deviated from random (i.e., equal probability of right or left).
 
 ```{r}
+# Experiment 1
 chisq.test(c(14, 4))
+
+# Experiment 2
 chisq.test(c(26, 10))
 ```
 
